# nhsengland.evalsense

./: CHANGELOG.md  pyproject.toml
evalsense/evaluation/: evaluator.py
evalsense/evaluation/evaluators/: bertscore.py  bleu.py  g_eval.py
evalsense/webui/components/: data.py  results.py
evalsense/workflow/: pipeline.py
evalsense/workflow/analysers/: metric_correlation_analyser.py
guide/: package-lock.json  package.json
